@@ -102,10 +102,9 @@ public class TestJobTrackerRestartWithLostTracker extends TestCase {
     UtilsForTests.waitTillDone(jobClient);
 
     // Check if the tracker got lost
-    assertTrue("Tracker killed while the jobtracker was down did not get lost "
-                + "upon restart", 
-                jobClient.getClusterStatus().getTaskTrackers() 
-                < mr.getNumTaskTrackers());
+    assertEquals("Tracker killed while the jobtracker was down did not get lost "
+                 + "upon restart", 
+                 jobClient.getClusterStatus().getTaskTrackers(), 1);
     
     //  Check if the tasks on the lost tracker got killed
     int failedMaps = 
